[tool.poetry]
name = "ngeo"
version = "0.2.0"
description = "ngeo is not an NGO"
authors = ["Abhinav Tushar <abhinav@lepisma.xyz>"]

[tool.poetry.dependencies]
python = "^3.8"
docopt = "^0.6.2"
scikit-learn = "^0.23.2"
pandas = "^1.1.3"
scipy = "^1.5.2"

[tool.poetry.dev-dependencies]
pytest = "^6.1.1"

[tool.poetry.scripts]
ngeo = "ngeo.cli:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
